[tool.poetry]
name = "hephaestus"
version = "0.1.0"
description = ""
authors = ["Joao Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fiona = "^1.8.22"
tifffile = "^2022.10.10"
plotly = "^5.11.0"
pandas = "^1.5.2"
nbformat = "^5.7.3"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
